# AthiVegam

./: .clang-format  .clang-tidy  .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  COMPILATION_FIXES.md  CONTRIBUTING.md  README.md  RUN_TESTS.md  TESTS_IMPLEMENTATION_SUMMARY.md  cli.py  premake5.lua
AthiVegam/: CMakeLists.txt
AthiVegam/Comm/: Bus.cpp  Bus.hpp  CMakeLists.txt  Channel.cpp  Channel.hpp  Payload.hpp  Types.hpp
AthiVegam/Core/: Application.cpp  Application.hpp  CMakeLists.txt  EntryPoint.hpp  Logger.cpp  Logger.hpp  Logger.inl  Result.hpp  Span.hpp  Types.hpp
AthiVegam/Core/Memory/: Allocators.cpp  Allocators.hpp  FrameArena.cpp  FrameArena.hpp  Handle.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SlabAllocator.hpp
AthiVegam/Core/Platform/: Filesystem.cpp  Filesystem.hpp  Platform.cpp  Platform.hpp  Threading.cpp  Threading.hpp  Time.cpp  Time.hpp
AthiVegam/ECS/: Archetype.hpp  CMakeLists.txt  ComponentRegistry.hpp  ComponentTraits.hpp  ParallelQuery.hpp  Query.hpp  World.hpp
AthiVegam/Jobs/: CMakeLists.txt  Fiber.cpp  Fiber.hpp  HazardTracker.cpp  HazardTracker.hpp  Hazards.cpp  Hazards.hpp  Scheduler.cpp  Scheduler.hpp  Types.hpp
AthiVegam/include/AthiVegam/: App.h  Engine.h  Log.h  Main.h
AthiVegam/include/AthiVegam/Core/: ImGuiWindow.h  VegamWindow.h
AthiVegam/include/AthiVegam/Graphics/: FrameBuffer.h  Helpers.h  Mesh.h  RenderCommands.h  Shader.h
AthiVegam/include/AthiVegam/Input/: Controller.h  Keyboard.h  Mouse.h
AthiVegam/include/AthiVegam/Managers/: LogManager.h  RenderManager.h
AthiVegam/src/: Engine.cpp
AthiVegam/src/Core/: ImGuiWindow.cpp  VegamWindow.cpp
AthiVegam/src/Graphics/: FrameBuffer.cpp  Helpers.cpp  Mesh.cpp  RenderCommands.cpp  Shader.cpp
AthiVegam/src/Input/: Controller.cpp  Keyboard.cpp  Mouse.cpp
AthiVegam/src/Managers/: LogManager.cpp  RenderManager.cpp
Parugu/include/Parugu/: Editor.h
Parugu/src/: Editor.cpp
ParuguEditor/src/: main.cpp
cmake/: CompilerWarnings.cmake  FindDiligent.cmake
docs/: AV_ProjectRequirementsDocument.md  AthiVegam.md  CLion_Setup.md  Phase0_Completion_Report.md  Phase1_Completion_Report.md  Phase2_Audit_Report.md  Phase2_Completion_Report.md  Phase2_Critical_Fixes_Summary.md  Phase2_Performance_Verification_Guide.md  Phase2_Test_Coverage_Report.md  Phase3_Completion_Report.md
docs/guides/: ecs.md  unicode-windows.md
examples/: CMakeLists.txt
examples/00_EngineTest/: CMakeLists.txt  main.cpp
scripts/: fix_clion.bat  run_performance_benchmarks.bat
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/ECS/: CMakeLists.txt  TestECS_Integration.cpp
tests/performance/: CMakeLists.txt
tests/performance/ECS/: CMakeLists.txt  TestECS_Performance.cpp
tests/unit/: CMakeLists.txt  TestPlaceholder.cpp
tests/unit/Comm/: CMakeLists.txt  TestCommLayer.cpp
tests/unit/Core/: CMakeLists.txt  README.md  TestFrameArena.cpp  TestPoolAllocator.cpp  TestSlabAllocator.cpp  TestThreading.cpp
tests/unit/ECS/: CMakeLists.txt  TestECS_ComponentOperations.cpp  TestECS_ComponentSystem.cpp  TestECS_EntityLifecycle.cpp  TestECS_ParallelIteration.cpp  TestECS_Query.cpp
tests/unit/Jobs/: CMakeLists.txt  TestFiber.cpp  TestHazardTracker.cpp  TestJobsBasic.cpp  TestParallelFor.cpp  TestScheduler.cpp  TestSchedulerHazardIntegration.cpp  TestWorkStealing.cpp
tools/: buildsln.py  gensln.py  globals.py  run.bat  run.py  version.py
