# AthiVegam Engine Modules

# Include compiler warnings helper
include(CompilerWarnings)

# Core module (Foundation)
add_subdirectory(Core)

# Future modules (uncomment as implemented)
add_subdirectory(Jobs)
add_subdirectory(Comm)
# add_subdirectory(ECS)
# add_subdirectory(Rendering)
# add_subdirectory(Physics)
# add_subdirectory(Scripting)
# add_subdirectory(Networking)
# add_subdirectory(Assets)
# add_subdirectory(EditorIPC)

